--- a/index.html
+++ b/index.html
@@ -8,49 +8,115 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #b6babe;
+            background-image: url('https://via.placeholder.com/1920x1080');
+            background-size: cover;
+            background-attachment: fixed;
             font-family: 'Arial', sans-serif;
+            color: #fff;
         }
-        .countdown span {
-            font-size: 2rem;
-            margin: 0 10px;
-            padding: 10px 15px;
-            border: 3px solid #007bff;
-            border-radius: 10px;
-            color: #007bff;
-            background-color: #e9f5ff;
+        .navbar {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+        .navbar-brand {
+            font-size: 1.5rem;
             font-weight: bold;
+            color: #fff;
         }
-        .btn-custom {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            font-size: 1.2rem;
-            padding: 10px 20px;
-            border-radius: 30px;
-            transition: all 0.3s ease;
+        .navbar-nav .nav-link {
+            color: #fff;
         }
-        .btn-custom:hover {
-            background-color: #0056b3;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        .section {
+            padding: 60px 0;
         }
-        .card {
-            border: none;
+        .about-bg {
+            background-color: rgba(0, 0, 0, 0.7);
             border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
-        .table-dark {
-            background-color: #343a40;
+        .testimonial {
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 15px;
+            padding: 20px;
+        }
+        .footer {
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 20px 0;
+            text-align: center;
+        }
+        .footer p {
             color: #fff;
         }
-        .inner-table td {
-            background-color: #495057;
-            color: #fff;
+        .emoji {
+            font-size: 1.5rem;
         }
     </style>
+        <style>
+            /* body {
+                background-color: #b6babe;
+                font-family: 'Arial', sans-serif;
+            } */
+            .countdown span {
+                font-size: 2rem;
+                margin: 0 10px;
+                padding: 10px 15px;
+                border: 3px solid #007bff;
+                border-radius: 10px;
+                color: #007bff;
+                background-color: #e9f5ff;
+                font-weight: bold;
+            }
+            .btn-custom {
+                background-color: #007bff;
+                color: white;
+                border: none;
+                font-size: 1.2rem;
+                padding: 10px 20px;
+                border-radius: 30px;
+                transition: all 0.3s ease;
+            }
+            .btn-custom:hover {
+                background-color: #0056b3;
+                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            }
+            .card {
+                border: none;
+                border-radius: 15px;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            }
+            .table-dark {
+                background-color: #343a40;
+                color: #fff;
+            }
+            .inner-table td {
+                background-color: #495057;
+                color: #fff;
+            }
+        </style>
 </head>
 <body>
-    <div class="container py-5">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">MWARE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Header
+    <header class="text-center text-white py-5">
+        <h1 class="display-4">Welcome to MWARE SELF HELP GROUP</h1>
+        <p class="lead">Empowering communities, one step at a time ✌✨</p>
+    </header>
+    <div class="container py-5"> -->
         <!-- Header Section -->
         <div class="text-center mb-5">
             <h1 class="display-4 text-primary fw-bold">MWARE SELF HELP GROUP</h1>
@@ -166,6 +232,73 @@
         console.log("Event Date:", eventDate); // Debug: Check if the event date is correct
     </script>
     
-    
+    <!-- About Section -->
+    <section id="about" class="section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 about-bg">
+                    <h2 class="text-center">About Us</h2>
+                    <p class="text-center">We are a community-driven group committed to uplifting lives through collaborative efforts. Our mission is to empower individuals and transform communities ❤️.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="section">
+        <div class="container">
+            <h2 class="text-center">Testimonials</h2>
+            <div class="row mt-4">
+                <div class="col-md-4 testimonial">
+                    <p>"Joining MWARE has changed my life for the better. The support I received is unparalleled. 😊"</p>
+                    <h5 class="text-end">- Nathan</h5>
+                </div>
+                <div class="col-md-4 testimonial">
+                    <p>"Amazing group with dedicated members. Together, we achieve greatness. 🌟"</p>
+                    <h5 class="text-end">- Elijah</h5>
+                </div>
+                <div class="col-md-4 testimonial">
+                    <p>"Being a part of this group is an honor. The difference we make is extraordinary. 🌟"</p>
+                    <h5 class="text-end">- Grace</h5>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+        <div class="container">
+            <h2 class="text-center">Contact Us</h2>
+            <div class="row justify-content-center mt-4">
+                <div class="col-md-6">
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="Your Name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Your Email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea class="form-control" id="message" rows="4" placeholder="Your Message"></textarea>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Send Message 📧</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 MWARE SELF HELP GROUP | Made with ❤️ and dedication ✨</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
