--- a/index.html
+++ b/index.html
@@ -307,12 +307,12 @@
         <!-- Header Section -->
         <div class="text-center mb-5">
             <h1 class="display-4 text-primary fw-bold">MWARE SELF HELP GROUP</h1>
-            <p class="text-muted fs-5">Empowering communities, one step at a time</p>
+            <p class=" text-primary fs-5">Empowering communities, one step at a time</p>
         </div>
 
         <!-- Countdown Section -->
         <div class="text-center mb-5">
-            <h2 class="text-secondary mb-4">Countdown to the Meeting</h2>
+            <h2 class="text-primary mb-4">Countdown to the Meeting</h2>
             <div class="countdown d-flex justify-content-center gap-3">
                 <span id="days">00</span>
                 <span id="hours">00</span>
@@ -419,22 +419,23 @@
         console.log("Event Date:", eventDate); // Debug: Check if the event date is correct
     </script>
     
-    <!-- About Section -->
-    <section id="about" class="section">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8 about-bg">
-                    <h2 class="text-center">About Us</h2>
-                    <p class="text-center">We are a community-driven group committed to uplifting lives through collaborative efforts. Our mission is to empower individuals and transform communities ❤️.</p>
-                </div>
+<!-- About Section -->
+<section id="about" class="section">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 about-bg d-flex flex-column align-items-center">
+                <h2 class="text-center text-primary mb-4">About Us</h2>
+                <p class="text-center mb-4">We are a community-driven group committed to uplifting lives through collaborative efforts. Our mission is to empower individuals and transform communities ❤️.</p>
+                <img src="images/about-image.jpg" alt="About Us" class="about-image rounded-circle shadow-lg mb-4">
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="section">
         <div class="container">
-            <h2 class="text-center">Testimonials</h2>
+            <h2 class="text-center text-primary ">Testimonials</h2>
             <div class="row mt-4">
                 <div class="col-md-4 testimonial">
                     <p>"Joining MWARE has changed my life for the better. The support I received is unparalleled. 😊"</p>
@@ -455,7 +456,7 @@
     <!-- Contact Section -->
     <section id="contact" class="section">
         <div class="container">
-            <h2 class="text-center">Contact Us</h2>
+            <h2 class="text-center text-primary ">Contact Us</h2>
             <div class="row justify-content-center mt-4">
                 <div class="col-md-6">
                     <form>
