--- a/index.html
+++ b/index.html
@@ -357,7 +357,6 @@
         <div class="text-center mb-5">
             <h2 class="text-primary mb-4">Countdown to the end of year</h2>
             <div class="countdown d-flex justify-content-center gap-3">
-                <span id="years">2024</span>
                 <span id="days">00</span>
                 <span id="hours">00</span>
                 <span id="minutes">00</span>
@@ -494,6 +493,7 @@
                                     <tr><td>Dec</td><td></td></tr>
                                 </table>
                                      <td class="text-center">150</td>
+                                     <td class="text-center"></td>
                             </td>
                         </tr>
                             <tr>
@@ -1184,7 +1184,7 @@
                           <tr>
                             <td class="text-center">36</td>
                             <td>PHOBIAN ROTE</td>
-                            <td class="text-center"></td>
+                            <td class="text-center">300</td>
                             <td>
                                 <table class="table table-sm inner-table table-bordered">
                                     <tr><td>Reg</td><td>100</td></tr>
@@ -1415,11 +1415,11 @@
                         </tr>
                          <tr>
                             <td class="text-center"></td>
-                            <td>MARY JACKSON</td>
+                            <td>MARYIANA JACKSON</td>
                              <td class="text-center"></td>
                              <td>
                                 <table class="table table-sm inner-table table-bordered">
-                                     <tr><td>Reg</td><td>100</td></tr>
+                                     <tr><td>Reg</td><td></td></tr>
                                     <tr><td>Feb</td><td></td></tr>
                                     <tr><td>Mar</td><td></td></tr>
                                     <tr><td>Apr</td><td></td></tr>
@@ -1557,8 +1557,10 @@
                             <textarea class="form-control" id="message" rows="4" placeholder="Your Message"></textarea>
                         </div>
                         <div class="text-center">
-                            <button type="submit" class="btn btn-primary">Send Message 📧</button>
+                            <button type="submit" class="btn btn-primary"><a href="https://wa.me/+254705665685/?"form-control id="message" rows="4" placeholder="Your Message"></textarea>Send Message📧</a></button>
                         </div>
+                        
+                </div>
                     </form>
                 </div>
             </div>
